# casadi_mpc1

./: CMakeLists.txt  README.md  package.xml  setup.py
src/: casadi_mpc_node.py
